@@ -7,4 +7,5 @@ require_once __DIR__ . '/class/bootstrap_imdbphp.php';
 require_once __DIR__ . '/class/class.config.php';
 require_once __DIR__ . '/class/class.lumiere.php';
 require_once __DIR__ . '/class/class.widget.php';
+require_once __DIR__ . '/class/class.metabox.php';
 require_once __DIR__ . '/class/functions.php';
